# sbilby

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python_test.yml
examples/: 1D_gwf_bilby_RNLE_comparison.py  1D_gwf_bilby_RNLE_comparison_multidetector.py  Polished_real_data_injection.py  Real_data.py  Test_aligned_4096.gwf  Test_aligned_noise_4096.gwf
src/sbilby/: __init__.py  data_generation.py  simulation_based_inference.py  simulation_based_inference_multidetector.py  simulation_based_inference_multidetector_realData.py
