[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "sbilby"
authors = [{name = "Mattia Emma"}]
dynamic = ["version", "description"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
]

[project.urls]
Homepage = "TBD"
Issues = "TBD"

[tool.setuptools_scm]
version_file = "src/sbilby/_version.py"
