[build-system]
requires = [
    "setuptools>=67",
    "wheel",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "sbilby"
version = "0.0.1"
description = "A package to perform residual neural likelihood evaluation for gravitational waves"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/MattiaEmma2022/sbilby"
Issues = "https://github.com/MattiaEmma2022/sbilby/issues"

[tool.setuptools_scm]
version_file = "src/sbilby/_version.py"
