[metadata]
name = sbilby
version = 0.0.1
author = Mattia Emma
author_email = mattia.emma@ligo.org
description = A package to perform residual neural likelihood evaluation for gravitational waves
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MattiaEmma2022/sbilby
project_urls =
    Bug Tracker = https://github.com/MattiaEmma2022/sbilby/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src


